--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">LeagueOfHeroes</string>
     <string name="hero_name">hero_name</string>
+    <string name="action_search">Search</string>
 
 </resources>
